--- a/src/components/Containers/LoginContainer&RecoverContainer/LoginAndRecoverContainers.module.css
+++ b/src/components/Containers/LoginContainer&RecoverContainer/LoginAndRecoverContainers.module.css
@@ -1,5 +1,5 @@
 .loginBody{
-  background: linear-gradient(90deg, #ffffff,#adecff);
+  background: linear-gradient(90deg, #fff,#adecff);
 }
 
 .loginBody main{
