--- a/src/components/Containers/Header/parts/HeaderTop/HeaderTop.module.css
+++ b/src/components/Containers/Header/parts/HeaderTop/HeaderTop.module.css
@@ -15,26 +15,15 @@
   align-items: flex-start;
   justify-content: flex-start;
   column-gap: 1.875rem;
-}
-
-@media (max-width: 84.5rem) {
-  .headerTopList{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-.headerTopList{
   margin-inline: 1.875rem;
-  row-gap: 0.5rem;
 }
 
 .headerBorder{
   margin-inline: 1rem 1.25rem;
   height: 2.1875rem;
   width: 2px;
-  background-color: rgba(0, 0, 0, 0.15);
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background-color: rgb(0 0 0 / 15%);
+  box-shadow: 0 4px 4px 0 rgb(0 0 0 / 25%);
 }
 
 .headerTopLocation{
@@ -60,4 +49,12 @@
   font-size: 1rem;
   font-weight: 500;
   line-height: 1;
+}
+
+@media (max-width: 84.5rem) {
+  .headerTopList{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 0.5rem;
+  }
 }
