--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
-@import './variables.css';
+@import url('./variables.css');
+
 body{
   font-family: var(--main-font), sans-serif;
   font-weight: 600;
