--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
-@import "./fonts.css";
-@import "./globals.css";
-@import "./normalize.css";
-@import "./variables.css";
+@import url("./fonts.css");
+@import url("./globals.css");
+@import url("./normalize.css");
+@import url("./variables.css");
 
 
