--- a/src/components/Containers/LoginContainer&RecoverContainer/LoginContainer.module.css
+++ b/src/components/Containers/LoginContainer&RecoverContainer/LoginContainer.module.css
@@ -67,12 +67,17 @@
   color: var(--color-text-light);
 }
 
+.backLink{
+  line-height: 1;
+  background-color: transparent;
+  border: none;
+}
+
 @media (max-width: 48rem) {
   .loginBlock {
     width: 100%;
     height: 100%;
     box-shadow: none;
-    min-height: 0;
   }
 
   .loginBody {
@@ -84,8 +89,15 @@
   }
 }
 
+@media (hover: hover) {
+  .backLink:hover{
+    color: var(--color-text-dark);
+  }
+}
+
 @media (hover: none) {
-  .mainLink:active {
+  .mainLink:active,
+  .backLink:hover{
     color: var(--color-text-dark);
   }
 }
