--- a/src/components/features/ContactsContainer/ContactsContainer.module.css
+++ b/src/components/features/ContactsContainer/ContactsContainer.module.css
@@ -25,6 +25,90 @@
   width: 100%;
 }
 
+.formInner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2rem;
+  padding: 1.5rem;
+}
+
+.formInputs {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
+}
+
+.formText {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: space-between;
+  max-width: calc(50% - 1rem);
+  gap: 1rem;
+}
+
+.formReason {
+  padding-block: 1rem;
+  padding-inline: 1.5rem;
+}
+
+.radioList {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.formRadios {
+  display: grid;
+  grid-template-columns: auto auto;
+  row-gap: 1.25rem;
+}
+
+.radioItem {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.formLegend {
+  line-height: 1;
+  font-size: clamp(1.25rem, 2.66vw, 2rem);
+}
+
+.formTextArea {
+  width: 100%;
+  border: var(--gray-border);
+  outline: none;
+  caret-color: var(--color-accent);
+  font-size: clamp(1rem, 2.6vw, 1.25rem);
+  padding-block: clamp(0.5rem, 2.08vw, 1rem);
+  padding-inline: 0.5rem;
+  resize: none;
+  height: 11rem;
+}
+
+.formTextArea::placeholder {
+  color: var(--color-text-light);
+}
+
+.isRed {
+  border: 2px solid var(--color-red);
+}
+
+.errorBlock {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.25rem;
+}
+
+.error {
+  font-size: 0.75rem;
+  color: var(--color-red);
+}
+
 @media (max-width: 75rem) {
   .contactsInformation {
     grid-template-columns: 1fr;
@@ -39,5 +123,30 @@
 
   .contactsMap {
     height: clamp(16.5rem, 35.66vw, 26.75rem);
+  }
+
+  .formRadios {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .formLegend {
+    margin-bottom: max(2rem, 3.75vw);
+  }
+}
+
+@media (max-width: 48rem) {
+  .formInputs {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .formReason {
+    padding-left: 0;
+  }
+
+  .formText {
+    max-width: 100%;
+    gap: 0.5rem;
   }
 }
