--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -9,6 +9,7 @@
   --color-gray-light: #d9d9d9;
   --color-red: #f00;
   --main-border-radius: 0.75rem;
+  --second-border-radius: 6.25rem;
   --main-font: 'Inter';
   --main-transition: 0.2s;
   --main-shadow: 0 4px 4px 0 rgb(0 0 0 / 25%);
