--- a/src/pages/Main/Categories/Categories.module.css
+++ b/src/pages/Main/Categories/Categories.module.css
@@ -2,11 +2,18 @@
   display: flex;
   flex-direction: column;
   line-height: 1;
-  row-gap: 1rem;
+  gap: 1rem;
+  overflow: hidden;
+  max-width: calc(100vw - var(--padding-x) - var(--padding-x));
 }
 
 .categoriesButtons{
-
+  display: flex;
+  gap: 0.5rem;
+  white-space: nowrap;
+  overflow-x: auto;
+  scrollbar-width: none;
+  padding-block: 0.25rem;
 }
 
 .category{
@@ -15,4 +22,5 @@
   border-radius: var(--second-border-radius);
   border: none;
   color: var(--color-text-light);
+  flex-shrink: 0;
 }
