--- a/src/components/ui/BasketLink/BasketLink.module.css
+++ b/src/components/ui/BasketLink/BasketLink.module.css
@@ -1,3 +1,7 @@
+.basketOverlay {
+  position: relative;
+}
+
 .basket {
   display: flex;
   position: relative;
@@ -31,13 +35,124 @@
   color: var(--color-text-dark);
 }
 
+.basketPopUp {
+  border-radius: var(--main-border-radius);
+  right: 0;
+  position: absolute;
+  padding: 1rem;
+  width: 30rem;
+  background-color: var(--color-text-white);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  visibility: hidden;
+  opacity: 0;
+  user-select: none;
+}
+
+.basketPopUpBorder {
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: rgb(0 0 0 / 15%);
+}
+
+.basketPopUpList {
+  scrollbar-gutter: stable;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 1rem;
+  height: 22rem;
+  overflow-y: auto;
+  padding-right: 1rem;
+  scrollbar-color: var(--color-accent) transparent;
+  scrollbar-width: thin;
+}
+
+.basketPopUpInformation {
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.basketPopUpInformationRight {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.basketProduct {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  font-size: clamp(1rem, 1.5vw, 1.125rem);
+}
+
+.basketProductLeft {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.basketProductRight {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.basketProductImage {
+  width: 4.375rem;
+  aspect-ratio: 1;
+  border-radius: var(--main-border-radius);
+  object-fit: cover;
+}
+
+.basketProductRemove {
+  padding: 0.5rem;
+  border: none;
+  background-color: transparent;
+}
+
+.basketProductRemove:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.basketPopUpLink {
+  background-color: transparent;
+  color: var(--color-accent);
+  padding-block: 0.5rem;
+  padding-inline: 1.5rem;
+  border: 1px solid var(--color-accent);
+  border-radius: 4rem;
+}
+
 @media (hover: hover) {
+  .basketOverlay:hover .basketPopUp {
+    opacity: 1;
+    visibility: visible;
+    user-select: auto;
+  }
+
+  .basketProductRemove:hover {
+    color: var(--color-accent);
+  }
+
   .basketLink:hover .basketIcon {
     stroke: var(--color-accent);
   }
 
   .basketLink:hover .basketBalance {
     color: var(--color-accent);
+  }
+
+  .basketPopUpLink:hover {
+    color: var(--color-text-white);
+    background-color: var(--color-accent);
   }
 
   .basketLink:hover .quantity {
@@ -57,4 +172,10 @@
   .basketLink:active .quantity {
     background-color: var(--color-accent);
   }
+}
+
+.basketPopUpLink:active {
+  color: var(--color-text-white);
+  background-color: var(--color-accent);
+  transform: scale(0.97);
 }
