--- a/src/components/ui/BasketLink/DeskTopBasket/BasketLink.module.css
+++ b/src/components/ui/BasketLink/DeskTopBasket/BasketLink.module.css
@@ -50,6 +50,16 @@
   user-select: none;
 }
 
+.basketPopUpEmpty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  gap: 1rem;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+}
+
 .basketPopUpBorder {
   display: block;
   height: 2px;
@@ -61,7 +71,6 @@
   scrollbar-gutter: stable;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   row-gap: 1rem;
   height: 22rem;
@@ -78,7 +87,7 @@
   align-items: center;
 }
 
-.basketPopUpInformationRight {
+.basketPopUpInformationBlock {
   display: flex;
   align-items: center;
   gap: 1rem;
