fix[slider, caregoriesButtons]: add the ability to switch between keyboard arrows for slider and categoriesButtons, split the slider into components, fix a bug with productModal

--- a/src/pages/Main/Categories/Categories.module.css
+++ b/src/pages/Main/Categories/Categories.module.css
@@ -30,6 +30,12 @@
   color: var(--color-black);
 }
 
+.productsLoading {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .categoryBlock {
   display: flex;
   flex-direction: column;
