--- a/src/components/ui/BasketLink/DeskTopBasket/BasketLink.module.css
+++ b/src/components/ui/BasketLink/DeskTopBasket/BasketLink.module.css
@@ -48,6 +48,7 @@
   visibility: hidden;
   opacity: 0;
   user-select: none;
+  z-index: 400;
 }
 
 .basketPopUpEmpty {
@@ -99,6 +100,7 @@
   justify-content: space-between;
   align-items: center;
   font-size: clamp(1rem, 1.5vw, 1.125rem);
+  gap: 0.5rem;
 }
 
 .basketProductLeft {
@@ -111,6 +113,11 @@
   display: flex;
   align-items: center;
   gap: 0.75rem;
+  flex-shrink: 0;
+}
+
+.basketProductPrice {
+  white-space: nowrap;
 }
 
 .basketProductImage {
@@ -124,6 +131,7 @@
   padding: 0.5rem;
   border: none;
   background-color: transparent;
+  flex-shrink: 0;
 }
 
 .basketProductRemove:disabled {
