--- a/src/components/ui/Search/Search.module.css
+++ b/src/components/ui/Search/Search.module.css
@@ -1,27 +1,39 @@
-.searchForm {
-  display: grid;
-  grid-template-columns: 1fr auto auto;
+.searchWrapper {
+  width: 100%;
+  position: relative;
   max-width: 77rem;
+}
+
+.searchForm {
+  display: flex;
   width: 100%;
   border: 1px solid var(--color-gray-light);
   border-radius: 6.25rem;
-  padding: 2px;
+  padding-block: 2px;
+  padding-left: clamp(0.5rem, 1.33vw, 1rem);
+  padding-right: 2px;
+  gap: 0.5rem;
   align-items: center;
 }
 
 .searchButtons {
+  flex-shrink: 0;
   display: flex;
   column-gap: clamp(0.5rem, 1.1666vw, 0.875rem);
   align-items: center;
 }
 
 .searchInput {
+  width: 100%;
   font-weight: 500;
   border: none;
   outline: none;
-  padding-left: clamp(0.5rem, 1.33vw, 1rem);
   line-height: 1;
   caret-color: var(--color-accent);
+}
+
+.searchInput::-webkit-search-cancel-button {
+  display: none;
 }
 
 .searchInput:focus-visible {
@@ -29,6 +41,7 @@
 }
 
 .clearButton {
+  flex-shrink: 0;
   border: none;
   background-color: transparent;
 }
@@ -36,6 +49,83 @@
 .clearIcon {
   cursor: pointer;
   stroke: var(--color-text-light);
+}
+
+.searchProducts {
+  position: absolute;
+  width: 100%;
+  background-color: var(--color-text-white);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  z-index: 300;
+  max-height: 20rem;
+  overflow-y: auto;
+  border-bottom-right-radius: var(--main-border-radius);
+  border-bottom-left-radius: var(--main-border-radius);
+  scrollbar-gutter: stable;
+  scrollbar-color: var(--color-accent) transparent;
+  scrollbar-width: thin;
+}
+
+.searchProductsLoading {
+  align-items: center;
+}
+
+.emptyProduct {
+  text-align: center;
+}
+
+.searchProduct {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 1rem;
+}
+
+.searchProductRight {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+}
+
+.searchProductInformation {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  max-width: min(40rem, 53vw);
+}
+
+.searchProductDescription {
+  font-size: 0.875rem;
+  line-height: 1.2;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.searchProductTitle,
+.productPrice {
+  font-size: clamp(1rem, 1.66vw, 1.25rem);
+  line-height: 1;
+}
+
+.searchProductImage {
+  width: 4.375rem;
+  aspect-ratio: 1;
+  object-fit: cover;
+}
+
+@media (max-width: 48rem) {
+  .searchProductRight {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 @media (hover: hover) {
